--- a/MarsPlay.vcxproj.filters
+++ b/MarsPlay.vcxproj.filters
@@ -60,6 +60,12 @@
     <ClCompile Include="lib.cpp">
       <Filter>Lib</Filter>
     </ClCompile>
+    <ClCompile Include="Palette.cpp">
+      <Filter>Render</Filter>
+    </ClCompile>
+    <ClCompile Include="TextureBuffer.cpp">
+      <Filter>GL</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader\mars_fragment.shader">
@@ -114,6 +120,12 @@
     </ClInclude>
     <ClInclude Include="PedrReader.h">
       <Filter>Render</Filter>
+    </ClInclude>
+    <ClInclude Include="Palette.h">
+      <Filter>Render</Filter>
+    </ClInclude>
+    <ClInclude Include="TextureBuffer.h">
+      <Filter>GL</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
