--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -2,5 +2,12 @@
 <MarsPlay>
 	<PedrDirectory>E:\Mars\Pedr_BIN\</PedrDirectory>
 	<OrbitStart>0</OrbitStart>
-	<OrbitEnd>200</OrbitEnd>
+	<OrbitEnd>1000</OrbitEnd>
+	<OrbitpointStep>20</OrbitpointStep>
+	<PalettSize>1024</PalettSize>
+	<Palette>
+		<Color Height="-32565">0x80FF80</Color>
+		<Color Height=" 21180">0x0000FF</Color>
+		<Color Height=" 21180">0xFF8080</Color>
+	</Palette>
 </MarsPlay>
