--- a/MarsPlay.vcxproj
+++ b/MarsPlay.vcxproj
@@ -175,7 +175,12 @@
     <ClCompile Include="ShaderLoader.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="TextureBuffer.cpp" />
+    <ClCompile Include="tinystr.cpp" />
+    <ClCompile Include="tinyxml.cpp" />
+    <ClCompile Include="tinyxmlerror.cpp" />
+    <ClCompile Include="tinyxmlparser.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
+    <ClCompile Include="XMLreader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="MarsPlay.config" />
@@ -185,6 +190,7 @@
   <ItemGroup>
     <ClInclude Include="BufferBounder.h" />
     <ClInclude Include="BufferOpenGL.h" />
+    <ClInclude Include="CConfig.h" />
     <ClInclude Include="IndexBuffer.h" />
     <ClInclude Include="lib.h" />
     <ClInclude Include="MarsPlay.h" />
@@ -198,9 +204,12 @@
     <ClInclude Include="ShaderLoader.h" />
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="TextureBuffer.h" />
+    <ClInclude Include="tinystr.h" />
+    <ClInclude Include="tinyxml.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="VertexBuffer.h" />
     <ClInclude Include="Vocabulary.h" />
+    <ClInclude Include="XMLreader.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Shader.rc" />
