XML pars Palette

--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -5,9 +5,28 @@
 	<OrbitEnd>1000</OrbitEnd>
 	<OrbitpointStep>20</OrbitpointStep>
 	<PalettSize>1024</PalettSize>
-	<Palette>
+	<PaletteDefault>2</PaletteDefault>
+	<Palette id="1" size="1024">
 		<Color Height="-32565">0x80FF80</Color>
 		<Color Height="     0">0x0000FF</Color>
 		<Color Height=" 21180">0xFF8080</Color>
+	</Palette>
+	<Palette id="2" size="16">
+		<Color Height="-32565">0x000000</Color>
+		<Color Height="-20000">0x000000</Color>
+		<Color Height=" -6000">0x000000</Color>
+		<Color Height=" -5900">0x0d2d0a</Color>
+		<Color Height=" -4000">0x094d4b</Color>
+		<Color Height=" -3000">0x20687a</Color>
+		<Color Height="  -700">0x186291</Color>
+		<Color Height="  -500">0x165082</Color>
+		<Color Height="     0">0x0089fe</Color>
+		<Color Height="   100">0x616a19</Color>
+		<Color Height="   500">0x6a5819</Color>
+		<Color Height="  1000">0xa56d2b</Color>
+		<Color Height="  3000">0xa5512b</Color>
+		<Color Height="  5000">0xab1313</Color>
+		<Color Height="  6000">0xab1313</Color>
+		<Color Height=" 21180">0xFFFFFF</Color>
 	</Palette>
 </MarsPlay>
