--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <MarsPlay>
+	<Logger>
+		<LogFile>error.log</LogFile>
+		<Debug clear="1">Off</Debug>
+		<Release clear="1">On</Release>
+	</Logger>
 	<PedrDirectory>E:\Mars\Pedr_BIN\</PedrDirectory>
 	<OrbitStart>0</OrbitStart>
-	<OrbitEnd>1000</OrbitEnd>
-	<OrbitpointStep>20</OrbitpointStep>
+	<OrbitEnd>10000</OrbitEnd>
+	<OrbitpointStep>40</OrbitpointStep>
 	<PalettSize>1024</PalettSize>
 	<PaletteDefault>2</PaletteDefault>
 	<Palette id="1" size="1024">
