--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <MarsPlay>
 	<Logger>
-		<LogFile>error.log</LogFile>
-		<Debug clear="1">Off</Debug>
+		<LogFile>!MarsPlay.log</LogFile>
+		<Debug clear="1">On</Debug>
 		<Release clear="1">On</Release>
 	</Logger>
 	<PedrDirectory>E:\Mars\Pedr_BIN\</PedrDirectory>
