Palette changing by 3 and 4 keys

--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <MarsPlay>
 	<Logger>
-		<LogFile>!MarsPlay.log</LogFile>
+		<LogFile>!MarsPlay_log.txt</LogFile>
 		<Debug clear="1">On</Debug>
-		<Release clear="1">On</Release>
+		<Release clear="0">On</Release>
 	</Logger>
 	<PedrDirectory>E:\Mars\Pedr_BIN\</PedrDirectory>
 	<OrbitStart>0</OrbitStart>
@@ -11,12 +11,30 @@
 	<OrbitpointStep>40</OrbitpointStep>
 	<PalettSize>1024</PalettSize>
 	<PaletteDefault>2</PaletteDefault>
-	<Palette id="1" size="1024">
+	<Palette id="1" interpolate="1024">
 		<Color Height="-32565">0x80FF80</Color>
 		<Color Height="     0">0x0000FF</Color>
 		<Color Height=" 21180">0xFF8080</Color>
 	</Palette>
-	<Palette id="2" size="16">
+	<Palette id="2" interpolate="1600">
+		<Color Height="-32565">0x000000</Color>
+		<Color Height="-20000">0x000000</Color>
+		<Color Height=" -6000">0x000000</Color>
+		<Color Height=" -5900">0x0d2d0a</Color>
+		<Color Height=" -4000">0x094d4b</Color>
+		<Color Height=" -3000">0x20687a</Color>
+		<Color Height="  -700">0x186291</Color>
+		<Color Height="  -500">0x165082</Color>
+		<Color Height="     0">0x0089fe</Color>
+		<Color Height="   100">0x616a19</Color>
+		<Color Height="   500">0x6a5819</Color>
+		<Color Height="  1000">0xa56d2b</Color>
+		<Color Height="  3000">0xa5512b</Color>
+		<Color Height="  5000">0xab1313</Color>
+		<Color Height="  6000">0xab1313</Color>
+		<Color Height=" 21180">0xFFFFFF</Color>
+	</Palette>
+	<Palette id="3" interpolate="36">
 		<Color Height="-32565">0x000000</Color>
 		<Color Height="-20000">0x000000</Color>
 		<Color Height=" -6000">0x000000</Color>
