--- a/MarsPlay.vcxproj
+++ b/MarsPlay.vcxproj
@@ -181,7 +181,7 @@
     <ClCompile Include="IndexBuffer.cpp" />
     <ClCompile Include="Palette.cpp" />
     <ClCompile Include="PedrReader.cpp" />
-    <ClCompile Include="RenderMars.cpp" />
+    <ClCompile Include="RenderPedr.cpp" />
     <ClCompile Include="SceneRender.cpp" />
     <ClCompile Include="SceneRenderBase.cpp" />
     <ClCompile Include="ShaderLoader.cpp" />
@@ -210,7 +210,7 @@
     <ClInclude Include="Palette.h" />
     <ClInclude Include="PedrReader.h" />
     <ClInclude Include="Render.h" />
-    <ClInclude Include="RenderMars.h" />
+    <ClInclude Include="RenderPedr.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SceneRender.h" />
     <ClInclude Include="SceneRenderBase.h" />
