--- a/MarsPlay.vcxproj
+++ b/MarsPlay.vcxproj
@@ -197,8 +197,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="MarsPlay.config" />
-    <None Include="Shader\mars_fragment.shader" />
-    <None Include="Shader\mars_vertex.shader" />
+    <None Include="Shader\megdr_fragment.shader" />
+    <None Include="Shader\megdr_vertex.shader" />
+    <None Include="Shader\pedr_fragment.shader" />
+    <None Include="Shader\pedr_vertex.shader" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BufferBounder.h" />
