Add config params Add indeces

--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -5,6 +5,13 @@
 		<Debug clear="1">On</Debug>
 		<Release clear="0">On</Release>
 	</Logger>
+	
+	<RadiusFile>E:\Mars\MEGDR\MEGR90N000CB.IMG</RadiusFile>
+	<AreoidFile>E:\Mars\MEGDR\MEGA90N000CB.IMG</AreoidFile>
+	<BaseHeight>3396000</BaseHeight>
+	<Lines>720</Lines>
+	<LineSamples>1440</LineSamples>
+	
 	<PedrDirectory>E:\Mars\Pedr_BIN\</PedrDirectory>
 	<OrbitStart>0</OrbitStart>
 	<OrbitEnd>10000</OrbitEnd>
