add megdr reader

--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -5,22 +5,29 @@
 		<Debug clear="1">On</Debug>
 		<Release clear="0">On</Release>
 	</Logger>
+
+	<MegdrDefault>1</MegdrDefault>
+	<Megdr id="1">
+		<RadiusFile>E:\Mars\MEGDR\004\MEGR90N000CB.IMG</RadiusFile>
+		<AreoidFile>E:\Mars\MEGDR\004\MEGA90N000CB.IMG</AreoidFile>
+		<BaseHeight>3396000</BaseHeight>
+		<Lines>720</Lines>
+		<LineSamples>1440</LineSamples>
+	</Megdr>
+	<Megdr id="2">
+		<RadiusFile>E:\Mars\MEGDR\016\MEGR90N000EB.IMG</RadiusFile>
+		<AreoidFile>E:\Mars\MEGDR\016\MEGA90N000EB.IMG</AreoidFile>
+		<BaseHeight>3396000</BaseHeight>
+		<Lines>2880</Lines>
+		<LineSamples>5760</LineSamples>
+	</Megdr>
 	
-	<RadiusFile>E:\Mars\MEGDR\MEGR90N000CB.IMG</RadiusFile>
-	<AreoidFile>E:\Mars\MEGDR\MEGA90N000CB.IMG</AreoidFile>
-	<BaseHeight>3396000</BaseHeight>
-	<Lines>720</Lines>
-	<LineSamples>1440</LineSamples>
-	
-	<PedrDirectory>E:\Mars\Pedr_BIN\</PedrDirectory>
-	<OrbitStart>0</OrbitStart>
-	<OrbitEnd>100</OrbitEnd>
-	<OrbitpointStep>40</OrbitpointStep>
 	<PaletteDefault>2</PaletteDefault>
 	<Palette id="1" interpolate="1024">
-		<Color Height="-32565">0x80FF80</Color>
-		<Color Height="     0">0x0000FF</Color>
-		<Color Height=" 21180">0xFF8080</Color>
+		<Color Height="-25000">0x000000</Color>
+		<Color Height="-1000">0x00AA00</Color>
+		<Color Height="    0">0x0000FF</Color>
+		<Color Height="21180">0xFF0000</Color>
 	</Palette>
 	<Palette id="2" interpolate="1600">
 		<Color Height="-32565">0x100000</Color>
