--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -9,27 +9,34 @@
 	<MegdrDefault>1</MegdrDefault>
 	<Megdr id="1">
 		<RadiusFile>E:\Mars\MEGDR\004\MEGR90N000CB.IMG</RadiusFile>
-		<AreoidFile>E:\Mars\MEGDR\004\MEGA90N000CB.IMG</AreoidFile>
+		<TopographyFile>E:\Mars\MEGDR\004\MEGT90N000CB.IMG</TopographyFile>
 		<BaseHeight>3396000</BaseHeight>
 		<Lines>720</Lines>
 		<LineSamples>1440</LineSamples>
 	</Megdr>
 	<Megdr id="2">
 		<RadiusFile>E:\Mars\MEGDR\016\MEGR90N000EB.IMG</RadiusFile>
-		<AreoidFile>E:\Mars\MEGDR\016\MEGA90N000EB.IMG</AreoidFile>
+		<TopographyFile>E:\Mars\MEGDR\016\MEGT90N000EB.IMG</TopographyFile>
 		<BaseHeight>3396000</BaseHeight>
 		<Lines>2880</Lines>
 		<LineSamples>5760</LineSamples>
 	</Megdr>
-	
-	<PaletteDefault>2</PaletteDefault>
+	<Megdr id="3">
+		<RadiusFile>E:\Mars\MEGDR\032\megr90n000fb.IMG</RadiusFile>
+		<TopographyFile>E:\Mars\MEGDR\032\megt90n000fb.IMG</TopographyFile>
+		<BaseHeight>3396000</BaseHeight>
+		<Lines>5760</Lines>
+		<LineSamples>11520</LineSamples>
+</Megdr>
+
+	<PaletteDefault>3</PaletteDefault>
 	<Palette id="1" interpolate="1024">
 		<Color Height="-25000">0x000000</Color>
 		<Color Height="-1000">0x00AA00</Color>
 		<Color Height="    0">0x0000FF</Color>
 		<Color Height="21180">0xFF0000</Color>
 	</Palette>
-	<Palette id="2" interpolate="1600">
+	<Palette id="2" interpolate="512">
 		<Color Height="-32565">0x100000</Color>
 		<Color Height="-20000">0x101000</Color>
 		<Color Height=" -6000">0x100010</Color>
@@ -47,10 +54,28 @@
 		<Color Height="  6000">0xab1313</Color>
 		<Color Height=" 21180">0xFFFFFF</Color>
 	</Palette>
-	<Palette id="3" interpolate="36">
-		<Color Height="-32565">0x000000</Color>
-		<Color Height="-20000">0x000000</Color>
-		<Color Height=" -6000">0x000000</Color>
+	<Palette id="3" interpolate="4096">
+		<Color Height="-32565">0x100000</Color>
+		<Color Height="-20000">0x101000</Color>
+		<Color Height=" -6000">0x100010</Color>
+		<Color Height=" -5900">0x0d2d0a</Color>
+		<Color Height=" -4000">0x094d4b</Color>
+		<Color Height=" -3000">0x20687a</Color>
+		<Color Height="  -700">0x186291</Color>
+		<Color Height="  -500">0x165082</Color>
+		<Color Height="     0">0x0089fe</Color>
+		<Color Height="   100">0x616a19</Color>
+		<Color Height="   500">0x6a5819</Color>
+		<Color Height="  1000">0xa56d2b</Color>
+		<Color Height="  3000">0xa5512b</Color>
+		<Color Height="  5000">0xab1313</Color>
+		<Color Height="  6000">0xab1313</Color>
+		<Color Height=" 21180">0xFFFFFF</Color>
+	</Palette>
+	<Palette id="4" interpolate="36">
+		<Color Height="-32565">0x100000</Color>
+		<Color Height="-20000">0x101000</Color>
+		<Color Height=" -6000">0x100010</Color>
 		<Color Height=" -5900">0x0d2d0a</Color>
 		<Color Height=" -4000">0x094d4b</Color>
 		<Color Height=" -3000">0x20687a</Color>
