focus lens code review

--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -6,6 +6,8 @@
 		<Release clear="0">On</Release>
 	</Logger>
 
+	<Lens>30</Lens>
+	
 	<MegdrDefault>1</MegdrDefault>
 	<Megdr id="1">
 		<RadiusFile>E:\Mars\MEGDR\004\MEGR90N000CB.IMG</RadiusFile>
@@ -37,9 +39,9 @@
 		<Color Height="21180">0xFF0000</Color>
 	</Palette>
 	<Palette id="2" interpolate="512">
-		<Color Height="-32565">0x100000</Color>
-		<Color Height="-20000">0x101000</Color>
-		<Color Height=" -6000">0x100010</Color>
+		<Color Height="-32565">0x202020</Color>
+		<Color Height="-20000">0x0f1d08</Color>
+		<Color Height=" -6000">0x041d08</Color>
 		<Color Height=" -5900">0x0d2d0a</Color>
 		<Color Height=" -4000">0x094d4b</Color>
 		<Color Height=" -3000">0x20687a</Color>
@@ -55,9 +57,9 @@
 		<Color Height=" 21180">0xFFFFFF</Color>
 	</Palette>
 	<Palette id="3" interpolate="4096">
-		<Color Height="-32565">0x100000</Color>
-		<Color Height="-20000">0x101000</Color>
-		<Color Height=" -6000">0x100010</Color>
+		<Color Height="-32565">0x202020</Color>
+		<Color Height="-20000">0x0f1d08</Color>
+		<Color Height=" -6000">0x041d08</Color>
 		<Color Height=" -5900">0x0d2d0a</Color>
 		<Color Height=" -4000">0x094d4b</Color>
 		<Color Height=" -3000">0x20687a</Color>
@@ -73,9 +75,9 @@
 		<Color Height=" 21180">0xFFFFFF</Color>
 	</Palette>
 	<Palette id="4" interpolate="36">
-		<Color Height="-32565">0x100000</Color>
-		<Color Height="-20000">0x101000</Color>
-		<Color Height=" -6000">0x100010</Color>
+		<Color Height="-32565">0x202020</Color>
+		<Color Height="-20000">0x0f1d08</Color>
+		<Color Height=" -6000">0x041d08</Color>
 		<Color Height=" -5900">0x0d2d0a</Color>
 		<Color Height=" -4000">0x094d4b</Color>
 		<Color Height=" -3000">0x20687a</Color>
