--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -17,7 +17,7 @@
 		<LineSamples>1440</LineSamples>
 	</Megdr>
 	<Megdr id="2">
-		<RadiusFile>E:\Mars\MEGDR\016\MEGR90N000EB.IMG_</RadiusFile>
+		<RadiusFile>E:\Mars\MEGDR\016\MEGR90N000EB.IMG</RadiusFile>
 		<TopographyFile>E:\Mars\MEGDR\016\MEGT90N000EB.IMG</TopographyFile>
 		<BaseHeight>3396000</BaseHeight>
 		<Lines>2880</Lines>
