Buffering loaded data

--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -8,7 +8,7 @@
 
 	<Lens>30</Lens>
 	
-	<MegdrDefault>2</MegdrDefault>
+	<MegdrDefault>1</MegdrDefault>
 	<Megdr id="1">
 		<RadiusFile>E:\Mars\MEGDR\004\MEGR90N000CB.IMG</RadiusFile>
 		<TopographyFile>E:\Mars\MEGDR\004\MEGT90N000CB.IMG</TopographyFile>
@@ -31,14 +31,14 @@
 		<LineSamples>11520</LineSamples>
 </Megdr>
 
-	<PaletteDefault>3</PaletteDefault>
+	<PaletteDefault>4</PaletteDefault>
 	<Palette id="1" interpolate="1024">
 		<Color Height="-25000">0x000000</Color>
 		<Color Height="-1000">0x00AA00</Color>
 		<Color Height="    0">0x0000FF</Color>
 		<Color Height="21180">0xFF0000</Color>
 	</Palette>
-	<Palette id="2" interpolate="512">
+	<Palette id="2" interpolate="128">
 		<Color Height="-32565">0x202020</Color>
 		<Color Height="-20000">0x0f1d08</Color>
 		<Color Height=" -6000">0x041d08</Color>
@@ -54,9 +54,10 @@
 		<Color Height="  3000">0xa5512b</Color>
 		<Color Height="  5000">0xab1313</Color>
 		<Color Height="  6000">0xab1313</Color>
+		<Color Height=" 18000">0xFFFFFF</Color>
 		<Color Height=" 21180">0xFFFFFF</Color>
 	</Palette>
-	<Palette id="3" interpolate="4096">
+	<Palette id="3" interpolate="512">
 		<Color Height="-32565">0x202020</Color>
 		<Color Height="-20000">0x0f1d08</Color>
 		<Color Height=" -6000">0x041d08</Color>
@@ -72,9 +73,10 @@
 		<Color Height="  3000">0xa5512b</Color>
 		<Color Height="  5000">0xab1313</Color>
 		<Color Height="  6000">0xab1313</Color>
+		<Color Height=" 18000">0xFFFFFF</Color>
 		<Color Height=" 21180">0xFFFFFF</Color>
 	</Palette>
-	<Palette id="4" interpolate="36">
+	<Palette id="4" interpolate="4096">
 		<Color Height="-32565">0x202020</Color>
 		<Color Height="-20000">0x0f1d08</Color>
 		<Color Height=" -6000">0x041d08</Color>
@@ -90,6 +92,7 @@
 		<Color Height="  3000">0xa5512b</Color>
 		<Color Height="  5000">0xab1313</Color>
 		<Color Height="  6000">0xab1313</Color>
+		<Color Height=" 18000">0xFFFFFF</Color>
 		<Color Height=" 21180">0xFFFFFF</Color>
 	</Palette>
 </MarsPlay>
