Load megdr data *.img from many files

--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -8,7 +8,7 @@
 
 	<Lens>30</Lens>
 	
-	<MegdrDefault>1</MegdrDefault>
+	<MegdrDefault>4</MegdrDefault>
 	<Megdr id="1">
 		<RadiusFile>E:\Mars\MEGDR\004\MEGR90N000CB.IMG</RadiusFile>
 		<TopographyFile>E:\Mars\MEGDR\004\MEGT90N000CB.IMG</TopographyFile>
@@ -29,7 +29,35 @@
 		<BaseHeight>3396000</BaseHeight>
 		<Lines>5760</Lines>
 		<LineSamples>11520</LineSamples>
-</Megdr>
+	</Megdr>
+	<Megdr id="4">
+		<Count>4</Count>
+		<RadiusFile sample="1" line="1"		>E:\Mars\MEGDR\Test\megr11.IMG</RadiusFile>
+		<TopographyFile sample="1" line="1"	>E:\Mars\MEGDR\Test\megt11.IMG</TopographyFile>
+		<RadiusFile sample="2" line="1"		>E:\Mars\MEGDR\Test\megr21.IMG</RadiusFile>
+		<TopographyFile sample="2" line="1"	>E:\Mars\MEGDR\Test\megt21.IMG</TopographyFile>
+		<RadiusFile sample="1" line="2"		>E:\Mars\MEGDR\Test\megr12.IMG</RadiusFile>
+		<TopographyFile sample="1" line="2"	>E:\Mars\MEGDR\Test\megt12.IMG</TopographyFile>
+		<RadiusFile sample="2" line="2"		>E:\Mars\MEGDR\Test\megr22.IMG</RadiusFile>
+		<TopographyFile sample="2" line="2"	>E:\Mars\MEGDR\Test\megt22.IMG</TopographyFile>
+		<BaseHeight>3396000</BaseHeight>
+		<Lines>720</Lines>
+		<LineSamples>1440</LineSamples>
+	</Megdr>
+	<Megdr id="5">
+		<Count>4</Count>
+		<RadiusFile sample="1" line="1"		>E:\Mars\MEGDR\064\megr00n000gb.IMG</RadiusFile>
+		<TopographyFile sample="1" line="1"	>E:\Mars\MEGDR\064\megt00n000gb.IMG</TopographyFile>
+		<RadiusFile sample="2" line="1"		>E:\Mars\MEGDR\064\megr00n180gb.IMG</RadiusFile>
+		<TopographyFile sample="2" line="1"	>E:\Mars\MEGDR\064\megt00n180gb.IMG</TopographyFile>
+		<RadiusFile sample="1" line="2"		>E:\Mars\MEGDR\064\megr90n000gb.IMG</RadiusFile>
+		<TopographyFile sample="1" line="2"	>E:\Mars\MEGDR\064\megt90n000gb.IMG</TopographyFile>
+		<RadiusFile sample="2" line="2"		>E:\Mars\MEGDR\064\megr90n180gb.IMG</RadiusFile>
+		<TopographyFile sample="2" line="2"	>E:\Mars\MEGDR\064\megt90n180gb.IMG</TopographyFile>
+		<BaseHeight>3396000</BaseHeight>
+		<Lines>5760</Lines>
+		<LineSamples>11520</LineSamples>
+	</Megdr>
 
 	<PaletteDefault>4</PaletteDefault>
 	<Palette id="1" interpolate="1024">
